[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "UWCS Discord Bot"
authors = ["UWCS Warwick <tech@uwcs.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
pyyaml = "^6.0.1"
dateparser = "^1.2.0"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}
parsita = "^2.1.1"
beautifulsoup4 = "^4.12.3"
markdown = "^3.6"
humanize = "^4.10.0"
markovify = "^0.9.4"
pillow = "^10.4.0"
deep-translator = "^1.11.4"
matplotlib = "^3.9.0"
openai = "^1.39.0"
icalendar = "^5.0.13"

[tool.poetry.scripts]
apollo = "apollo:entrypoint"

[tool.ruff]
ignore = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
